# rsdd-hs

./: .gitignore  CHANGELOG.org  LICENSE  README.org  flake.nix  rsdd-hs.cabal
examples/: Main.hs
lib/Foreign/: RSDD.hs
test/: Main.hs
